DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__AllowAnonymousRecipients__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__AllowAnonymousRecipients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowAnonymousRecipients</label>
    <type>Checkbox</type>
</CustomField>