DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__AllowMultiFill__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__AllowMultiFill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowMultiFill</label>
    <type>Checkbox</type>
</CustomField>