DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__CollectedResponses__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__CollectedResponses__c</fullName>
    <label>CollectedResponses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>