DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__CollectingData__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__CollectingData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CollectingData</label>
    <type>Checkbox</type>
</CustomField>