DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__CreateLeads__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__CreateLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreateLeads</label>
    <type>Checkbox</type>
</CustomField>