DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__Description2__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Description2__c</fullName>
    <label>Description2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>