DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__Description__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>