DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Expiration_Date__c</fullName>
    <description>Date when the survey cannot be filled anymore.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>