DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__Expiration_Date_Enabled__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Expiration_Date_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expiration Date Enabled</label>
    <type>Checkbox</type>
</CustomField>