DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__NotificationEmail__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__NotificationEmail__c</fullName>
    <label>NotificationEmail</label>
    <type>Email</type>
</CustomField>