DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__NotifyResponses__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__NotifyResponses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NotifyResponses</label>
    <type>Checkbox</type>
</CustomField>