DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__NumberOfPages__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__NumberOfPages__c</fullName>
    <label>NumberOfPages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>