DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__NumberOfQuestions__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__NumberOfQuestions__c</fullName>
    <label>NumberOfQuestions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>