DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelatedAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey</relationshipLabel>
    <relationshipName>Survey</relationshipName>
    <type>Lookup</type>
</CustomField>