DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelatedCase</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey</relationshipLabel>
    <relationshipName>Survey</relationshipName>
    <type>Lookup</type>
</CustomField>