DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelatedContact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey</relationshipLabel>
    <relationshipName>Survey</relationshipName>
    <type>Lookup</type>
</CustomField>