DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__SalesforceBaseURL__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__SalesforceBaseURL__c</fullName>
    <label>SalesforceBaseURL</label>
    <type>Url</type>
</CustomField>