DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__SurveyEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__SurveyEmailTemplate__c</fullName>
    <label>SurveyEmailTemplate</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>