DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__SurveyEmailTemplatePlain__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__SurveyEmailTemplatePlain__c</fullName>
    <label>SurveyEmailTemplatePlain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>