DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__TimesSent__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__TimesSent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TimesSent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>