DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey__c/fields/TIMBASURVEYS__Version__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Version__c</fullName>
    <label>Version</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>